[project]
name = "stream-support-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "juanquingom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "langchain-ollama"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
